--- a/qnd/gui/index.html
+++ b/qnd/gui/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Quick 'n Dirty  Xen Backup - alpha-1</title>
+  <title>Quick 'n Dirty  Xen Backup</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.6 -->
@@ -165,7 +165,7 @@
 		
 		<li>
           <a href="pages/backup.html">
-            <i class="fa fa-server"></i> <span>Backup</span>
+            <i class="fa fa-shield"></i> <span>Backup</span>
           </a>
         </li>
 		
@@ -177,7 +177,7 @@
 		
 		<li>
           <a href="pages/schedules.html">
-            <i class="fa fa-tasks"></i> <span>Schedules</span>
+            <i class="fa fa-calendar"></i> <span>Schedules</span>
             
           </a>
         </li>
@@ -198,7 +198,7 @@
 		
 		<li>
           <a href="pages/settings.html">
-            <i class="fa fa-server"></i> <span>Settings</span>
+            <i class="fa fa-cogs"></i> <span>Settings</span>
           </a>
         </li>
         
