--- a/qnd/gui/pages/datastores.html
+++ b/qnd/gui/pages/datastores.html
@@ -269,6 +269,7 @@
                   <div class="col-sm-10">
 						<select id="inputType"class="form-control">
                     <option value="smb">Samba/CIFS share</option>
+					<option value="smb-archive">Samba/CIFS archive</option>
                   </select>
 				  
                   </div>
@@ -444,7 +445,6 @@
 		var username = $("#inputUsername" ).val();
 		var password = $("#inputPassword" ).val();
 		var host = $("#inputHost" ).val();
-		
 		
 		var jsonData = '';
 		
