--- a/qnd/gui/pages/pools.html
+++ b/qnd/gui/pages/pools.html
@@ -681,6 +681,22 @@
 			});
 		});
 	}
+	
+	function toggle() {
+		if($("#label_cpu").css('display') === 'none' ) {
+			$("#label_cpu").css('display', 'block');
+		}
+		else {
+			$("#label_cpu").css('display', 'none');
+		}
+		
+		if($("#label_ram").css('display') === 'none' ) {
+			$("#label_ram").css('display', 'block');
+		}
+		else {
+			$("#label_ram").css('display', 'none');
+		}
+	}
 
 	$(document).ready(function(){
 		load();
@@ -723,6 +739,10 @@
 		});
 		
 		update_system();
+		
+		$(".sidebar-toggle").click(function(){
+			toggle();
+		});
 		
 	});
 </script>
