--- a/qnd/gui/pages/datastores.html
+++ b/qnd/gui/pages/datastores.html
@@ -521,6 +521,22 @@
 			$("#datastores_table").html(contents);
 		});
 	}
+	
+	function toggle() {
+		if($("#label_cpu").css('display') === 'none' ) {
+			$("#label_cpu").css('display', 'block');
+		}
+		else {
+			$("#label_cpu").css('display', 'none');
+		}
+		
+		if($("#label_ram").css('display') === 'none' ) {
+			$("#label_ram").css('display', 'block');
+		}
+		else {
+			$("#label_ram").css('display', 'none');
+		}
+	}
 
 	$(document).ready(function(){
 		load();
@@ -563,6 +579,10 @@
 		});
 		
 		update_system();
+		
+		$(".sidebar-toggle").click(function(){
+			toggle();
+		});
 	});
 </script>
 </body>
