--- a/qnd/gui/pages/datastores.html
+++ b/qnd/gui/pages/datastores.html
@@ -511,7 +511,7 @@
 				for (var i = 0; i < data.length; i++) {
 					var dobtns = button.replace('$DELETE$', 'confirmdelete(' + data[i].id + ',\'' + data[i].name + '\')');
 					dobtns = dobtns.replace('$EDIT$', 'editdatastore(' + data[i].id + ')');
-					contents = contents + '<tr><td>' + data[i].name + '</td><td>' + data[i].type + '</td><td>' + data[i].username + '</td><td>' + data[i].host + '</td><td>' + '</td><td class="pull-right" style="margin-right:3px;">' + dobtns + '</td></tr>';
+					contents = contents + '<tr><td>' + data[i].name + '</td><td>' + data[i].type + '</td><td>' + data[i].username + '</td><td>' + data[i].host + '</td><td>' + '</td><td><span class="pull-right" style="margin-right:3px;">' + dobtns + '</span></td></tr>';
 				}
 			}
 			else {
