--- a/qnd/gui/index.html
+++ b/qnd/gui/index.html
@@ -197,6 +197,12 @@
         </li>
 		
 		<li>
+          <a href="pages/archives.html">
+            <i class="fa fa-archive"></i> <span>Archives</span>
+          </a>
+        </li>
+		
+		<li>
           <a href="pages/settings.html">
             <i class="fa fa-cogs"></i> <span>Settings</span>
           </a>
