--- a/qnd/gui/pages/datastores.html
+++ b/qnd/gui/pages/datastores.html
@@ -186,6 +186,12 @@
         </li>
 		
 		<li>
+          <a href="archives.html">
+            <i class="fa fa-archive"></i> <span>Archives</span>
+          </a>
+        </li>
+		
+		<li>
           <a href="settings.html">
             <i class="fa fa-cogs"></i> <span>Settings</span>
           </a>
