--- a/qnd/gui/pages/settings.html
+++ b/qnd/gui/pages/settings.html
@@ -185,6 +185,12 @@
           </a>
         </li>
 		
+		<li>
+          <a href="archives.html">
+            <i class="fa fa-archive"></i> <span>Archives</span>
+          </a>
+        </li>
+		
 		<li class="active">
           <a href="settings.html">
             <i class="fa fa-server"></i> <span>Settings</span>
