close #16 implemented update #11 created restore wizard

--- a/qnd/gui/pages/documentation.html
+++ b/qnd/gui/pages/documentation.html
@@ -193,7 +193,7 @@
 		
 		<li>
           <a href="settings.html">
-            <i class="fa fa-server"></i> <span>Settings</span>
+            <i class="fa fa-cogs"></i> <span>Settings</span>
           </a>
         </li>
 		
