--- a/qnd/gui/pages/restore.html
+++ b/qnd/gui/pages/restore.html
@@ -494,6 +494,8 @@
   
 <!-- Page specific script -->
 <script>
+	var successmsg = '<div class="row"><div class="col-xs-12" ><div class="alert alert-success alert-dismissible"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button><h4><i class="icon fa fa-check"></i> $TITLE$</h4>$TEXT$</div></div></div>';  
+
 	function update_system() {
 		$.get('/api/xen/ui/system', function( stats ) {
 			$("#cpu_load").attr("aria-valuenow", stats.cpu_load);
@@ -573,10 +575,9 @@
 				data: jsonData,
 				contentType: "application/json"
 			}).done(function() {
-			  canceldatastore();
 			  var msg = successmsg.replace('$TITLE$', 'Success').replace('$TEXT$', 'Restore \'' + backupname + '\' added for VM \'' + $("#text_vmname").html() + '\'.')
 			  $("#messagebox").html(msg);
-			  load();
+			  $("#restore_dialog").css('display', 'none');
 			});
 	}
 	
