update #65 database reference

--- a/qnd/gui/pages/restore.html
+++ b/qnd/gui/pages/restore.html
@@ -173,7 +173,7 @@
 		
 		<li>
           <a href="backup.html">
-            <i class="fa fa-server"></i> <span>Backup</span>
+            <i class="fa fa-shield"></i> <span>Backup</span>
           </a>
         </li>
 		
@@ -185,7 +185,7 @@
 		
 		<li>
           <a href="schedules.html">
-            <i class="fa fa-tasks"></i> <span>Schedules</span>
+            <i class="fa fa-calendar"></i> <span>Schedules</span>
           </a>
         </li>
 		
