--- a/qnd/gui/pages/datastores.html
+++ b/qnd/gui/pages/datastores.html
@@ -226,6 +226,27 @@
 			<div id="messagebox"></div>
 	
 	
+	<!-- modal test datastore -->
+		
+		
+			<div id="modaldatastore" class="modal-dialog modal fix_modal" style="position:absolute; height: 186px;">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">×</span></button>
+                <h4 class="modal-title">Datastore validation - </h4>
+              </div>
+              <div class="modal-body">
+                <p id="txtmodaldatastore"></p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
+              </div>
+            </div>
+            <!-- /.modal-content -->
+          </div>
+	
+	
 		<!-- Delete modal -->
 		
 		
@@ -320,6 +341,7 @@
 			<div class="box-footer">
                 <button type="submit" onclick="canceldatastore()" class="btn btn-default">Cancel</button>
                 <button type="submit" onclick="saveit()" class="btn btn-info pull-right">Save</button>
+				<button type="button" id="testdatastorebtn" onclick="testdatastore()" style="margin-right:15px;" class="btn btn-success pull-right">Test Connection</button>
               </div>
           </div>
 		  </div>
@@ -361,7 +383,7 @@
 
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      <b>Version</b> alpha-3
+      <b>Version</b> alpha-4
     </div>
     <strong>Copyright &copy; 2017 <a href="https://github.com/enira/qnd-backup">Enira</a>, Template design: Copyright &copy; 2014-2016 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights
     reserved.
@@ -391,6 +413,47 @@
 <script>
 	var successmsg = '<div class="row"><div class="col-xs-12" ><div class="alert alert-success alert-dismissible"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button><h4><i class="icon fa fa-check"></i> $TITLE$</h4>$TEXT$</div></div></div>';  
 
+	
+	function testdatastore() {
+		var username = $("#inputUsername" ).val();
+		var password = $("#inputPassword" ).val();
+		var host = $("#inputHost" ).val();
+		var type = $("#inputType option:selected" )[0].value;
+		
+			jsonData = '{"username": "' + username + '", "host": "' + host + '", "password": "' + password + '", "type": "' + type + '"}';
+			
+			
+			$("#testdatastorebtn").html('<i class="fa fa-spin fa-fw fa-refresh"></i> Checking...');
+			
+			
+			
+			$.ajax({
+				url: '/api/xen/datastore/test/',
+				type: "POST",
+				dataType: "json",
+				data: jsonData,
+				contentType: "application/json"
+			}).done(function(data, statusText, xhr){
+			
+				$('html,body').scrollTop(0);
+				
+				
+				$('#modaldatastore').modal('toggle');
+				$("#modaldatastore").css("padding-right", "0px");	
+				var status = xhr.status;    
+				if(status == 200) {
+					$("#txtmodaldatastore").html('<label style="color: #00a65a;"><i class="fa fa-check"></i> Datastore is valid.</label>');
+					$("#testdatastorebtn").html('Test connection'); 
+				}
+				else if(status == 204) {
+					$("#txtmodaldatastore").html('<label style="color: #dd4b39;"><i class="fa fa-times-circle-o"></i> Datastore cannot be contacted.</label>');
+					$("#testdatastorebtn").html('Test connection'); 
+				}
+			});
+
+		
+	}
+	
 	function adddatastore() {
 		$("#wizardtitle").html("Add Datastore");
 		$("#inputId").val("(null)");
