close #94 update #91 created for backups update #27 basic messages update #10 licenses

--- a/qnd/gui/pages/backup.html
+++ b/qnd/gui/pages/backup.html
@@ -52,10 +52,10 @@
 				<li class="dropdown messages-menu">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 						<i class="fa fa-envelope-o"></i>
-						<span id="num_messages" class="label label-success">X</span>
+						<span id="num_messages" style="display:none" class="label label-success">X</span>
 					</a>
 					<ul class="dropdown-menu">
-						<li class="header" id="label_messages">XXXX</li>
+						<li class="header" id="label_messages"></li>
 						<li>
 							<!-- inner menu: contains the actual data -->
 							<ul class="menu" id="messages_total">
@@ -69,10 +69,10 @@
 				<li class="dropdown notifications-menu">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 						<i class="fa fa-bell-o"></i>
-						<span id="num_notifications" class="label label-warning">X</span>
+						<span id="num_notifications" style="display:none" class="label label-warning">X</span>
 					</a>
 					<ul class="dropdown-menu">
-						<li id="label_notifications" class="header">XXXX</li>
+						<li id="label_notifications" class="header"></li>
 						<li>
 							<!-- inner menu: contains the actual data -->
 							<ul class="menu" id="notifications_total">
@@ -87,10 +87,10 @@
 				<li class="dropdown tasks-menu">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 						<i class="fa fa-flag-o"></i>
-						<span id="num_tasks" class="label label-danger">X</span>
+						<span id="num_tasks" style="display:none" class="label label-danger">X</span>
 					</a>
 					<ul class="dropdown-menu">
-						<li id="label_tasks" class="header">XXXX</li>
+						<li id="label_tasks" class="header"></li>
 						<li>
 							<!-- inner menu: contains the actual data -->
 							<ul class="menu" id="tasks_total">
