--- a/qnd/gui/pages/backup.html
+++ b/qnd/gui/pages/backup.html
@@ -513,6 +513,11 @@
 			var msg_struct = '<li><a href="#"><h4 style="margin: 0 0 0 0">$FROM$<small><i class="fa fa-clock-o"></i>$TIME$</small></h4><p style="margin: 0 0 0 0">$TEXT$</p></a></li>';
 		
 			$("#num_messages").html(messages.messages);
+			
+			if(messages.messages > 0) {
+				$("#num_messages").show();
+			}
+			
 			$("#label_messages").html('You have ' + messages.messages + ' messages');
 			
 			for(var i=0; i<messages.messages_items.length; i++) {
@@ -525,19 +530,27 @@
 			$("#num_notifications").html(messages.notifications);
 			$("#label_notifications").html('You have ' + messages.notifications + ' notifications');
 			
+			if(messages.notifications > 0) {
+				$("#num_notifications").show();
+			}
+			
 			for(var i=0; i<messages.notifications_items.length; i++) {
 				var not = messages.notifications_items[i];
 				$("#notifications_total").append(notifications_struct.replace('$ICON$', not.icon).replace('$TEXT$', not.message));
 			}
 			
-			var tasks_struct = '<li><a href="#"><h3>$TITLE$<small class="pull-right">$PCT$%</small></h3><div class="progress xs"><div class="progress-bar progress-bar-aqua" style="width: $PCT$%" role="progressbar" aria-valuenow="$PCT$" aria-valuemin="0" aria-valuemax="100"><span class="sr-only">$PCT$% Complete</span></div></div></a></li>';
+			var tasks_struct = '<li><a href="#"><h3>$TITLE$<small class="pull-right">$PCT$%</small></h3><div class="progress xs"><div class="progress-bar progress-bar-primary progress-bar-striped" style="width: $PCT$%" role="progressbar" aria-valuenow="$PCT$" aria-valuemin="0" aria-valuemax="100"><span class="sr-only">$PCT$% Complete</span></div></div></a></li>';
 			
 			$("#num_tasks").html(messages.tasks);
 			$("#label_tasks").html('You have ' + messages.tasks + ' tasks');
 			
+			if(messages.tasks > 0) {
+				$("#num_tasks").show();
+			}
+			
 			for(var i=0; i<messages.tasks_items.length; i++) {
 				var task = messages.tasks_items[i];
-				$("#tasks_total").append(tasks_struct.replace('$TITLE$', task.title).replace('$PCT$', task.percent));
+				$("#tasks_total").append(tasks_struct.replace('$TITLE$', task.title).replace('$PCT$', task.percent).replace('$PCT$', task.percent).replace('$PCT$', task.percent));
 			}
 		});
 		
