--- a/qnd/gui/pages/restore.html
+++ b/qnd/gui/pages/restore.html
@@ -320,7 +320,7 @@
 					</select>
                   </div>
                 </div>
-				<div class="form-group" >
+				<div class="form-group" id="newname_validator">
                   <label for="machineLabel" class="col-sm-2 control-label">New Name</label>
 
                   <div class="col-sm-10">
@@ -569,15 +569,27 @@
 		//alert(jsonData);
 		
 			$.ajax({
-				url: '/api/xen/task/restore/',
+				url: '/api/xen/task/validate/',
 				type: "POST",
 				dataType: "json",
 				data: jsonData,
 				contentType: "application/json"
-			}).done(function() {
-			  var msg = successmsg.replace('$TITLE$', 'Success').replace('$TEXT$', 'Restore \'' + backupname + '\' added for VM \'' + $("#text_vmname").html() + '\'.')
-			  $("#messagebox").html(msg);
-			  $("#restore_dialog").css('display', 'none');
+			}).done(function(data) {
+			  //alert(data);
+			  if(data.length == 0) {
+				var msg = successmsg.replace('$TITLE$', 'Success').replace('$TEXT$', 'Restore \'' + backupname + '\' added for VM \'' + $("#text_vmname").html() + '\'.')
+				$("#messagebox").html(msg);
+				$("#restore_dialog").css('display', 'none');
+			  }
+			  else {
+				//error
+				for(var i=0; i<data.length;i++) {
+				   if(data[i] == 'vmname_duplicate') {
+				     // duplicate name: error
+					 $("#newname_validator").addClass('has-error');
+				   }
+				}
+			  }
 			});
 	}
 	
