--- a/qnd/gui/index.html
+++ b/qnd/gui/index.html
@@ -404,7 +404,8 @@
 			}
 			
 			var notifications_struct = '<li><a href="#"><i class="$ICON$"></i>$TEXT$</a></li>';
-			
+			var notifications_struct_dashboard = '<div class="callout" style="padding: 2px 30px 2px 15px;"><h5>$ICON$</h5><p>$TEXT$</p></div>';
+		
 			$("#num_notifications").html(messages.notifications);
 			$("#label_notifications").html('You have ' + messages.notifications + ' notifications');
 			
@@ -420,7 +421,7 @@
 				$("#notifications_total").append(notifications_struct.replace('$ICON$', not.icon).replace('$TEXT$', not.message));
 				
 				//dashboard
-				$( "#string_notifications" ).after(notifications_struct.replace('$ICON$', not.icon).replace('$TEXT$', not.message));
+				$( "#string_notifications" ).after(notifications_struct_dashboard.replace('$ICON$', not.icon).replace('$TEXT$', not.message));
 			}
 			
 			var tasks_struct = '<li><a href="#"><h3>$TITLE$<small class="pull-right">$PCT$%</small></h3><div class="progress xs"><div class="progress-bar progress-bar-primary progress-bar-striped" style="width: $PCT$%" role="progressbar" aria-valuenow="$PCT$" aria-valuemin="0" aria-valuemax="100"><span class="sr-only">$PCT$% Complete</span></div></div></a></li>';
