--- a/qnd/gui/pages/datastores.html
+++ b/qnd/gui/pages/datastores.html
@@ -458,6 +458,7 @@
 		$("#wizardtitle").html("Add Datastore");
 		$("#inputId").val("(null)");
 		$("#datastore_dialog").css('display', 'block');
+		$(window).scrollTop(0);
 	}
 	
 	function editdatastore(id) {
@@ -473,6 +474,7 @@
 			$("#inputId").val(data.id);
 			
 			$("#datastore_dialog").css('display', 'block');
+			$(window).scrollTop(0);
 		});
 	}
 	
@@ -531,6 +533,7 @@
 			  var msg = successmsg.replace('$TITLE$', 'Success').replace('$TEXT$', 'Datastore \'' + name + '\' added.')
 			  $("#messagebox").html(msg);
 			  load();
+			  $(window).scrollTop(0);
 			});
 		}
 		else {
@@ -547,6 +550,7 @@
 			  var msg = successmsg.replace('$TITLE$', 'Success').replace('$TEXT$', 'Datastore \'' + name + '\' changed.')
 			  $("#messagebox").html(msg);
 			  load();
+			  $(window).scrollTop(0);
 			});
 		}
 	
