--- a/qnd/gui/pages/pools.html
+++ b/qnd/gui/pages/pools.html
@@ -230,7 +230,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">×</span></button>
+                  <span aria-hidden="true">Ã—</span></button>
                 <h4 class="modal-title">Host validation - </h4>
               </div>
               <div class="modal-body">
@@ -251,7 +251,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">×</span></button>
+                  <span aria-hidden="true">Ã—</span></button>
                 <h4 class="modal-title">Confirm delete</h4>
               </div>
               <div class="modal-body">
@@ -272,7 +272,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">×</span></button>
+                  <span aria-hidden="true">Ã—</span></button>
                 <h4 class="modal-title">Confirm delete</h4>
               </div>
               <div class="modal-body">
@@ -478,7 +478,7 @@
 <script src="../plugins/fullcalendar/fullcalendar.min.js"></script>
 <!-- Page specific script -->
 <script>
-	var successmsg = '<div class="row"><div class="col-xs-12" ><div class="alert alert-success alert-dismissible"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button><h4><i class="icon fa fa-check"></i> $TITLE$</h4>$TEXT$</div></div></div>';  
+	var successmsg = '<div class="row"><div class="col-xs-12" ><div class="alert alert-success alert-dismissible"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">Ã—</button><h4><i class="icon fa fa-check"></i> $TITLE$</h4>$TEXT$</div></div></div>';  
 
 	function testhost() {
 		var host = $("#hostInputHost" ).val();
