--- a/qnd/gui/pages/pools.html
+++ b/qnd/gui/pages/pools.html
@@ -353,7 +353,7 @@
                   <label for="machineLabel" class="col-sm-2 control-label">Host</label>
 
                   <div class="col-sm-10">
-                    <input type="text" class="form-control" id="hostInputHost" placeholder="<ip address>">
+                    <input type="text" class="form-control" id="hostInputHost" placeholder="<IP address or FQDN>">
                   </div>
                 </div>
 				
